// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Common.Router - Internal Interface test allowPageLeave() 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <UU5.Bricks.PortalModal
    key=".1"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test allowPageLeave() 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <UU5.Bricks.PortalModal
    key=".1"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test preventPageLeave() 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <UU5.Bricks.PortalModal
    key=".1"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test preventPageLeave() 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <UU5.Bricks.PortalModal
    key=".1"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test scrollToFragment() 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <UU5.Bricks.PortalModal
    key=".1"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test scrollToFragment() 2`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <UU5.Bricks.PortalModal
    key=".1"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test setRoute() 1`] = `
<Fragment>
  <RouteComponent
    content="initial route"
    key=".0"
    params={Object {}}
  />
  <UU5.Bricks.PortalModal
    key=".1"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Common.Router - Internal Interface test setRoute() 2`] = `
<Fragment>
  <RouteComponent
    content="component, UC direct, no history"
    key=".0"
    params={
      Object {
        "noHistory": true,
      }
    }
  />
  <UU5.Bricks.PortalModal
    key=".1"
    ref_={[Function]}
  />
</Fragment>
`;
